--- a/resume/index.html
+++ b/resume/index.html
@@ -21,7 +21,7 @@
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="">marina tatshani</a>
+        <a class="navbar-brand" href="/">marina tatshani</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -29,10 +29,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="about">ABOUT <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/about">ABOUT <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="resume">RESUME</a>
+              <a class="nav-link" href="">RESUME</a>
             </li>
           </ul>
         </div>
