--- a/about/index.html
+++ b/about/index.html
@@ -21,7 +21,7 @@
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/">marina tatshani</a>
+        <a class="navbar-brand" href="marinatatshani/">marina tatshani</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -32,7 +32,7 @@
               <a class="nav-link" href="">ABOUT <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/resume">RESUME</a>
+              <a class="nav-link" href="marinatatshani/resume">RESUME</a>
             </li>
           </ul>
         </div>
