--- a/about.html
+++ b/about.html
@@ -5,39 +5,82 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <!-- DaisyUI -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@3.7.6/dist/full.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
 
     <link rel="stylesheet" href="./global.style.css">
 
     <title>marinatatshani</title>
+    <link rel="icon" href="images/sun-icon.png" sizes="32x32" type="image/png" />
   </head>
   <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href=".">marina tatshani</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+  <div class="navbar baseColor">
+    <div class="navbar-start">
+      <div class="dropdown">
+        <label tabindex="0" class="btn btn-ghost lg:hidden">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
+          </svg>
+        </label>
+        <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 font-extrabold">
+          <li><a href="about" class="hover:text-[#A697AD]">ABOUT</a></li>
+          <li><a href="resume" class="hover:text-[#A697AD]">RESUME</a></li>
+          <li><a href="" class="hover:text-[#A697AD]">GRAPHIC</a></li>
+          <li><a href="" class="hover:text-[#A697AD]">3D</a></li>
+          <li><a href="" class="hover:text-[#A697AD]">WEB</a></li>
+          <li><a href="" class="hover:text-[#A697AD]">FURNITURE</a></li>
+          <li><a href="" class="hover:text-[#A697AD]">BLOG</a></li>
+        </ul>
+      </div>
+      <a href=".">
+        <button class="btn btn-ghost normal-case text-xl text-[#E2883B] font-bold">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" /></svg>
+          marina tatshani
         </button>
+      </a>
+    </div>
+    <div class="navbar-end hidden lg:flex">
+      <ul class="menu menu-horizontal px-1 font-extrabold">
+        <li><a href="about" class="hover:text-[#A697AD]">ABOUT</a></li>
+        <li><a href="resume" class="hover:text-[#A697AD]">RESUME</a></li>
+        <li><a href="" class="hover:text-[#A697AD]">GRAPHIC</a></li>
+        <li><a href="" class="hover:text-[#A697AD]">3D</a></li>
+        <li><a href="" class="hover:text-[#A697AD]">WEB</a></li>
+        <li><a href="" class="hover:text-[#A697AD]">FURNITURE</a></li>
+        <li><a href="" class="hover:text-[#A697AD]">BLOG</a></li>
+      </ul>
+    </div>
+  </div>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="about">ABOUT <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="resume">RESUME</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+  <div class="container mx-auto">
+    <h1> ABOUT </h1>
+  </div>
 
-      <h3> ABOUT PAGE </h3>
+  <footer class="footer items-center py-14 bg-[#A697AD] text-[#E6E4D4]">
+    <aside class="items-center grid-flow-row lg:grid-flow-col">
+      <p class="text-lg lg:text-xl font-bold pr-10">marinatatshani@gmail.com</p>
+      <div class="flex flex-row gap-2">
+        <a>
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current">
+            <path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"></path>
+          </svg>
+        </a>
+        <a>
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current">
+            <path d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"></path>
+          </svg>
+        </a>
+      </div>
+    </aside>
+    <nav class="grid-flow-col md:place-self-center md:justify-self-end">
+      <div class="flex flex-col text-base">
+        <p>© Copyright 2023</p>
+        <p>All right reserved.</p>
+      </div>
+    </nav>
+  </footer>
+
   </body>
 </html>
