Updated navbar font size

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
   </head>
   <body>
 
-  <div class="navbar baseColor">
+  <div class="sticky top-0 z-50 navbar baseColor">
     <div class="navbar-start">
       <div class="dropdown">
         <label tabindex="0" class="btn btn-ghost lg:hidden">
@@ -35,14 +35,14 @@
         </ul>
       </div>
       <a href=".">
-        <button class="btn btn-ghost normal-case text-xl text-[#E2883B] font-bold">
+        <button class="btn btn-ghost w-max normal-case text-xl lg:text-2xl text-[#E2883B] font-bold">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" /></svg>
           marina tatshani
         </button>
       </a>
     </div>
     <div class="navbar-end hidden lg:flex">
-      <ul class="menu menu-horizontal px-1 font-extrabold">
+      <ul class="menu menu-horizontal px-1 font-extrabold text-base">
         <li><a href="about" class="hover:text-[#A697AD]">ABOUT</a></li>
         <li><a href="resume" class="hover:text-[#A697AD]">RESUME</a></li>
         <li><a href="" class="hover:text-[#A697AD]">GRAPHIC</a></li>
@@ -55,7 +55,7 @@
   </div>
 
   <div class="container mx-auto">
-    <h1> ABOUT </h1>
+    <h1> RESUME </h1>
   </div>
 
   <footer class="footer items-center py-14 bg-[#A697AD] text-[#E6E4D4]">
