Updated Home page

--- a/index.html
+++ b/index.html
@@ -55,24 +55,115 @@
   </div>
 
   <div class="container mx-auto">
-    <div class="mb-4">
-      <img
-        src="https://tecdn.b-cdn.net/img/new/standard/city/047.jpg"
-        class="h-auto max-w-full rounded-lg"
-        alt="" />
+    <!-- TEXT HEADER -->
+    <div class="py-40 grid grid-cols-1 gap-2 lg:gap-4">
+      <p class="text-2xl md:text-4xl lg:text-5xl xl:text-6xl font-extrabold lg:font-bold">Hey I’m Marina and I am a</p>
+      <p class="text-2xl md:text-4xl lg:text-5xl xl:text-6xl font-extrabold lg:font-bold">multidisciplinary digital designer</p>
+      <p class="text-base md:text-lg lg:text-xl xl:text-2xl font-bold lg:font-semibold">in the field of graphic design, 3D art, and furniture design.</p>
     </div>
-    <div class="mb-4">
-      <img
-        src="https://mdbootstrap.com//img/Photos/Square/1.jpg"
-        class="h-auto max-w-full rounded-full"
-        alt="" />
+
+    <div class="flex flex-col">
+      <!-- WORKS  -->
+      <p class="text-xl xl:text-2xl font-bold text-[#678309] pb-5">WORKS</p>
+      <!-- GALLERY -->
+      <div class="grid grid-cols-1 lg:grid-cols-3 gap-5">
+        <div class="lg:col-span-2 grid grid-rows-2 gap-5">
+          <div>
+            <div class="content">
+              <a href="">
+                <div class="content-overlay"></div>
+                <img
+                  class="content-image rounded-lg"
+                  src="images/graphic-design-cover.png"
+                  alt="image"
+                >
+                <div class="content-details fadeIn-top">
+                  <h3 class="content-title">Graphic Design</h3>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="grid grid-cols-1 lg:grid-cols-2 gap-5">
+            <div class="content h-full">
+              <a href="">
+                <div class="content-overlay"></div>
+                <img
+                  class="content-image rounded-lg h-full"
+                  src="images/funiture-cover.png"
+                  alt="image"
+                >
+                <div class="content-details fadeIn-top">
+                  <h3 class="content-title">Web Design</h3>
+                </div>
+              </a>
+            </div>
+            <div class="content h-full">
+              <a href="">
+                <div class="content-overlay"></div>
+                <img
+                  class="content-image rounded-lg h-full"
+                  src="images/funiture-cover.png"
+                  alt="image"
+                >
+                <div class="content-details fadeIn-top">
+                  <h3 class="content-title">Furniture Design</h3>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-span-1">
+          <div class="content">
+            <a href="">
+              <div class="content-overlay"></div>
+              <img
+                class="content-image rounded-lg"
+                src="images/3d-projects-cover.png"
+                alt="image"
+              >
+              <div class="content-details fadeIn-top">
+                <h3 class="content-title">3D Projects</h3>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="mb-4">
-      <img
-        src="https://tecdn.b-cdn.net/img/new/standard/city/044.jpg"
-        class="h-auto max-w-full rounded-full"
-        alt="" />
+
+    <div class="py-40 grid grid-cols-1 lg:grid-cols-2 gap-20 lg:gap-60 text-black">
+      <!-- MY DESIGN PHILOSOPHY -->
+      <div class="flex flex-col">
+        <p class="text-xl xl:text-2xl font-bold text-[#678309] pb-8">MY DESIGN PHILOSOPHY</p>
+        <p class="text-base">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        </p>
+      </div>
+      <!-- LEARN MORE ABOUT ME & RESUME -->
+      <div class="flex flex-col">
+        <!-- LEARN MORE ABOUT ME -->
+        <div class="grid grid-cols-1 gap-2">
+          <p class="text-xl xl:text-2xl font-bold text-[#678309]">LEARN MORE ABOUT ME</p>
+          <p class="text-base">Who I am, my achievements, interests, and experiences.</p>
+          <a href="about">
+            <button class="btn normal-case btn-neutral">
+              about me →
+            </button>
+          </a>
+        </div>
+        <!-- OR HEAD STRAIGHT TO MY RESUME -->
+        <div class="grid grid-cols-1 gap-2 pt-10">
+          <p class="text-xl xl:text-2xl font-bold text-[#678309]">OR HEAD STRAIGHT TO MY RESUME</p>
+          <p class="text-base">A summary of my work experience.</p>
+          <a href="about">
+            <button class="btn normal-case btn-neutral">
+              resume →
+            </button>
+          </a>
+        </div>
+      </div>
     </div>
+
   </div>
 
   <footer class="footer items-center py-14 bg-[#A697AD] text-[#E6E4D4]">
