Updated about page

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
     </div>
   </div>
 
-  <div class="container mx-auto">
+  <div class="container mx-auto px-5 md:px-10 xl:px-0">
     <!-- TEXT HEADER -->
-    <div class="py-40 grid grid-cols-1 gap-2 lg:gap-4">
+    <div class="py-20 md:py-40 grid grid-cols-1 gap-2 lg:gap-4">
       <p class="text-2xl md:text-4xl lg:text-5xl xl:text-6xl font-extrabold lg:font-bold">Hey I’m Marina and I am a</p>
       <p class="text-2xl md:text-4xl lg:text-5xl xl:text-6xl font-extrabold lg:font-bold">multidisciplinary digital designer</p>
       <p class="text-base md:text-lg lg:text-xl xl:text-2xl font-bold lg:font-semibold">in the field of graphic design, 3D art, and furniture design.</p>
