--- a/about.html
+++ b/about.html
@@ -54,8 +54,159 @@
     </div>
   </div>
 
-  <div class="container mx-auto">
-    <h1> RESUME </h1>
+  <div class="container mx-auto px-5 md:px-10 xl:px-0">
+    <!-- ABOUT ME -->
+    <div class="grid grid-cols-1 lg:grid-cols-3 gap-0 lg:gap-24 pt-40">
+      <div class="col-span-1">
+        <img
+          class="rounded-lg"
+          src="https://drive.google.com/uc?export=view&id=10kRo5XRw6UvNhv_65rSjkB86w0zzQViz"
+          alt="image"
+        >
+      </div>
+      <div class="col-span-2 flex flex-col">
+        <p class="text-4xl lg:text-6xl font-bold text-[#678309] py-10 lg:py-20">about me</p>
+        <p class="text-xl lg:text-2xl font-bold text-[#A697AD] pb-5">I am a lot of things.</p>
+        <p class="text-base lg:text-lg max-w-3xl">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+      </div>
+    </div>
+
+    <hr class="py-20 text-black">
+
+    <!-- INTERESTS + HOBBIES -->
+    <div class="grid grid-cols-2 gap-10 md:grid-cols-6 md:gap-5">
+      <div class="col-span-2">
+        <p class="text-xl xl:text-2xl font-bold text-[#678309]">INTERESTS<br/>+ HOBBIES</p>
+      </div>
+      <div class="grid grid-cols-1 gap-2 justify-items-center">
+        <img
+            src="https://drive.google.com/uc?export=view&id=1Cu83NSk_2GQiafB8j0n4sfnR6ft0UvE2"
+            alt="image"
+            width="100"
+            height="100"
+        >
+        <p class="font-bold text-lg">aerial yoga</p>
+      </div>
+      <div class="grid grid-cols-1 gap-2 justify-items-center">
+        <img
+            src="https://drive.google.com/uc?export=view&id=1i0T-5FIEvWU9u5FeUbfCe_gnxn-fvUZ2"
+            alt="image"
+            width="130"
+            height="130"
+        >
+        <p class="font-bold text-lg">camping</p>
+      </div>
+      <div class="grid grid-cols-1 gap-2 justify-items-center">
+        <img
+            src="https://drive.google.com/uc?export=view&id=1ml79EFRgwopUBhPBVuneWZ84GCRbJJOv"
+            alt="image"
+            width="100"
+            height="100"
+        >
+        <p class="font-bold text-lg">cacao drinker</p>
+      </div>
+      <div class="grid grid-cols-1 gap-2 justify-items-center">
+        <img
+            src="https://drive.google.com/uc?export=view&id=1qr0NW11PKVFqqWAjhT-4uQax_nT1vnOv"
+            alt="image"
+            width="100"
+            height="100"
+        >
+        <p class="font-bold text-lg">freediving</p>
+      </div>
+    </div>
+
+    <hr class="py-20 text-black">
+
+    <!-- PERSONAL -->
+    <div class="grid grid-cols-2 gap-10 md:grid-cols-6 md:gap-5">
+      <div class="col-span-2">
+        <p class="text-xl xl:text-2xl font-bold text-[#678309]">PERSONAL</p>
+      </div>
+      <div class="col-span-2 grid grid-cols-1 gap-5">
+        <div>
+          <p class="text-xl lg:text-2xl font-bold">Age: 26</p>
+          <p class="text-base lg:text-lg">December 9, 1996</p>
+        </div>
+        <div class="flex flex-row">
+          <img
+              src="https://drive.google.com/uc?export=view&id=1qPLaP21iFkLm3JVywEPofrb0xHlb3TRN"
+              alt="image"
+              width="35"
+              height="35"
+          >
+          <p class="font-bold text-lg text-[#A697AD] pl-10 tracking-wider">sagittarius</p>
+        </div>
+        <div class="flex flex-row">
+          <img
+              src="https://drive.google.com/uc?export=view&id=1wCa6SN6RlVQb0-_zQLeuCHHi-supY2z5"
+              alt="image"
+              width="35"
+              height="35"
+          >
+          <p class="font-bold text-lg text-[#A697AD] pl-10 tracking-wider">scorpio</p>
+        </div>
+        <div class="flex flex-row">
+          <img
+              src="https://drive.google.com/uc?export=view&id=1MsSU0mIEk51fecfpncfcVR00mXFKv6iM"
+              alt="image"
+              width="35"
+              height="35"
+          >
+          <p class="font-bold text-lg text-[#A697AD] pl-10 tracking-wider">aquarius</p>
+        </div>
+      </div>
+      <div class="col-span-2 grid grid-cols-1 gap-14 lg:gap-2">
+        <div>
+          <p class="text-xl lg:text-2xl font-bold">Gender/Pronoun</p>
+          <p class="text-base lg:text-lg">She/Her</p>
+        </div>
+        <div>
+          <p class="text-xl lg:text-2xl font-bold">Ethnicity</p>
+          <p class="text-base lg:text-lg">Filipino</p>
+        </div>
+      </div>
+    </div>
+
+    <hr class="py-20 text-black">
+
+    <!-- SPECIAL AWARDS -->
+    <div class="grid grid-cols-2 gap-10 md:grid-cols-6 md:gap-5">
+      <div class="col-span-2 grid grid-cols-1 gap-14 lg:gap-2">
+        <div>
+          <p class="text-xl lg:text-2xl font-bold">Gender/Pronoun</p>
+          <p class="text-base lg:text-lg">She/Her</p>
+        </div>
+        <div>
+          <p class="text-xl lg:text-2xl font-bold">Ethnicity</p>
+          <p class="text-base lg:text-lg">Filipino</p>
+        </div>
+      </div>
+    </div>
+
+    <hr class="py-20 text-black">
+
+    <!-- EDUCATION -->
+    <div class="grid grid-cols-2 gap-10 md:grid-cols-6 md:gap-5">
+      <div class="col-span-2 grid grid-cols-1 gap-14 lg:gap-2">
+        <div>
+          <p class="text-xl lg:text-2xl font-bold">Gender/Pronoun</p>
+          <p class="text-base lg:text-lg">She/Her</p>
+        </div>
+        <div>
+          <p class="text-xl lg:text-2xl font-bold">Ethnicity</p>
+          <p class="text-base lg:text-lg">Filipino</p>
+        </div>
+      </div>
+    </div>
+
+    <hr class="py-20 text-black">
+
   </div>
 
   <footer class="footer items-center py-14 bg-[#A697AD] text-[#E6E4D4]">
