--- a/resume.html
+++ b/resume.html
@@ -24,7 +24,7 @@
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
           </svg>
         </label>
-        <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 font-extrabold">
+        <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-stone-200 rounded-box w-52 font-extrabold">
           <li><a href="about" class="hover:text-[#A697AD]">ABOUT</a></li>
           <li><a href="resume" class="hover:text-[#A697AD]">RESUME</a></li>
           <li><a href="" class="hover:text-[#A697AD]">GRAPHIC</a></li>
@@ -54,8 +54,275 @@
     </div>
   </div>
 
-  <div class="container mx-auto">
-    <h1> RESUME </h1>
+  <div class="container mx-auto px-5 md:px-10 xl:px-0">
+
+    <!-- WORK EXPERIENCE -->
+    <div class="flex flex-col pt-40">
+      <p class="text-[#678309] font-bold text-xl lg:text-2xl pb-5">2017-Present</p>
+      <p class="text-[#678309] font-bold text-5xl lg:text-6xl pb-16">Work Experience</p>
+      <div class="grid grid-cols-1 lg:grid-cols-5 gap-10 pb-28">
+        <div class="grid grid-cols-1 gap-4 justify-items-center">
+          <img
+              src="https://drive.google.com/uc?export=view&id=18ZfvApUVjhZ9EN6VINOq0yLkeIFbmQN3"
+              alt="image"
+              width="100"
+              height="100"
+          >
+          <p class="font-medium text-xl text-[#678309]">Graphic Designer</p>
+        </div>
+        <div class="grid grid-cols-1 gap-4 justify-items-center">
+          <img
+              src="https://drive.google.com/uc?export=view&id=18ZfvApUVjhZ9EN6VINOq0yLkeIFbmQN3"
+              alt="image"
+              width="100"
+              height="100"
+          >
+          <p class="font-medium text-xl text-[#678309]">3D Visualizer</p>
+        </div>
+        <div class="grid grid-cols-1 gap-4 justify-items-center">
+          <img
+              src="https://drive.google.com/uc?export=view&id=1dQCtQN0Do4Btik8dDgX7nOIpxvD-Q2eh"
+              alt="image"
+              width="60"
+              height="60"
+          >
+          <p class="font-medium text-xl text-[#678309]">Furniture Designer</p>
+        </div>
+      </div>
+      <div class="flex flex-col items-center lg:items-start">
+        <a href="resume" class="pb-2">
+          <button class="btn normal-case btn-neutral btn-wide">
+            download my resume →
+          </button>
+        </a>
+        <p class="font-medium text-lg italic">or continue scrolling down...</p>
+      </div>
+    </div>
+
+    <div class="divider py-20"></div>
+
+    <!-- JMARKETING -->
+    <div class="grid grid-cols-1 lg:grid-cols-3 gap-16 lg:gap-20">
+      <div class="col-span-1 justify-self-center">
+        <img
+          src="https://drive.google.com/uc?export=view&id=19P-zPDShFmcumh8zGxu7qxMxGi_VeaDv"
+          alt="image"
+        >
+      </div>
+      <div class="col-span-1 lg:col-span-2 flex flex-col">
+        <p class="font-bold text-2xl pb-2">Associate Art Director at The JMarketing</p>
+        <p class="font-semibold text-lg pb-10">May 2021 - Present&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ontario, Canada</p>
+        <div class="text-lg">
+          <ul class="list-disc pl-5">
+            <li>Responsible for the visual style and elements of our corporate clients in Canada and the US.</li>
+            <li>Developing brand content for social media and websites.</li>
+            <li>Designs social media campaigns mostly for corporate projects.</li>
+            <li>Leads the design direction on website projects handed to me (mostly corporate brands such as manufacturing companies in Canada.)</li>
+            <li>Creating graphic design content such as brand logos, design assets for websites, and brand identity.</li>
+            <li>Creates motion graphic design content mostly for social media campaigns.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="py-20"></div>
+
+    <!-- BY TATSHANI -->
+    <div class="grid grid-cols-1 lg:grid-cols-3 gap-16 lg:gap-20">
+      <div class="col-span-1 justify-self-center">
+        <img
+          src="https://drive.google.com/uc?export=view&id=1svKQVm9z77B_w0NA2J-_sc5gxMr_occ7"
+          alt="image"
+        >
+      </div>
+      <div class="col-span-1 lg:col-span-2 flex flex-col">
+        <p class="font-bold text-2xl pb-2">Freelance Designer at By Tatshani</p>
+        <p class="font-semibold text-lg pb-10">June 2020 - Present&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Philippines</p>
+        <div class="text-lg">
+          <ul class="list-disc pl-5">
+            <li>Produces 3D animations and product renders catering to small businesses for their social media content posts.</li>
+            <li>Produces graphic design content and designs the brand identity of small businesses in the Philippines (such as logo design, brand book and the likes.)</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="py-20"></div>
+
+    <!-- CASA SELMA -->
+    <div class="grid grid-cols-1 lg:grid-cols-3 gap-16 lg:gap-20">
+      <div class="col-span-1 justify-self-center">
+        <img
+          src="https://drive.google.com/uc?export=view&id=1gV3rZMPm4bVrtpOwSTUYn8uaquEVS_eA"
+          alt="image"
+        >
+      </div>
+      <div class="col-span-1 lg:col-span-2 flex flex-col">
+        <p class="font-bold text-2xl pb-2">Furniture Designer at Casa Selma</p>
+        <p class="font-semibold text-lg pb-10">May 2018 - May 2021&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Cebu, Philippines</p>
+        <div class="text-lg">
+          <ul class="list-disc pl-5">
+            <li>Create and conceptualizes new product designs for home furniture, lighting, home accessories etc.</li>
+            <li>Produces 3D model designs of furniture and interior spaces.</li>
+            <li>Manage and supervise furniture and design projects for both residential and commercial projects in the Philippines.</li>
+            <li>Prepares initial AutoCad drawings for manufacturing.</li>
+            <li>Coordinates with suppliers and contractors in managing projects.</li>
+            <li>Designed major projects under the Vito Selma brand for Okada Manila, Rosche Bobois, Ayala Malls, and Vogue Italia.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="py-20"></div>
+
+    <!-- STUDIO ATD -->
+    <div class="grid grid-cols-1 lg:grid-cols-3 gap-16 lg:gap-20">
+      <div class="col-span-1 justify-self-center">
+        <img
+          src="https://drive.google.com/uc?export=view&id=1eM-uCp-x9zGLq-3Ypev9kP6g1Zjrvy8B"
+          alt="image"
+        >
+      </div>
+      <div class="col-span-1 lg:col-span-2 flex flex-col">
+        <p class="font-bold text-2xl pb-2">Furniture Designer at Studio ATD</p>
+        <p class="font-semibold text-lg pb-10">October 2017 - May 2018&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Manila, Philippines</p>
+        <div class="text-lg">
+          <ul class="list-disc pl-5">
+            <li>Coordinates with the company's partner in China for the design production.</li>
+            <li>Conceptualizes the design for office furniture (global market) and home furniture (local market) designs.</li>
+            <li>Creates sketches, 3D models, and rendered photos for each furniture design.</li>
+            <li>Prepares AutoCad drawings for quotations and production.</li>
+            <li>Responsible for the overall visual design and direction.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="divider py-20"></div>
+
+    <p class="text-[#678309] font-bold text-5xl lg:text-6xl pt-10 pb-20">Skills & Expertise</p>
+
+    <div class="grid grid-cols-1 lg:grid-cols-4 gap-5 justify-items-center lg: justify-items-start">
+      <!-- SOFTWARES -->
+      <div>
+        <div class="flex flex-col">
+          <img
+              src="https://drive.google.com/uc?export=view&id=1BVvXzvQTmsJyBx3LCs5itMwDYdXWdWQE"
+              alt="image"
+              width="100"
+              height="100"
+          >
+          <p class="font-bold text-2xl pb-10">Softwares</p>
+        </div>
+        <div class="text-lg">
+          <ul>
+            <li>Adobe Photoshop</li>
+            <li>Adobe Illustrator</li>
+            <li>Adobe After Effects</li>
+            <li>Adobe Premiere Pro</li>
+            <li>Adobe XD</li>
+            <li>3DS Max</li>
+            <li>Blender</li>
+            <li>Corona Renderer</li>
+          </ul>
+        </div>
+      </div>
+       <!-- MANAGEMENT APPS -->
+       <div>
+        <div class="flex flex-col">
+          <img
+              src="https://drive.google.com/uc?export=view&id=1BVvXzvQTmsJyBx3LCs5itMwDYdXWdWQE"
+              alt="image"
+              width="100"
+              height="100"
+          >
+          <p class="font-bold text-2xl pb-10">Management<br/>Apps</p>
+        </div>
+        <div class="text-lg">
+          <ul>
+            <li>Microsoft 365</li>
+            <li>Outlook</li>
+            <li>Google Workspace</li>
+            <li>ClickUp</li>
+            <li>Notion</li>
+          </ul>
+        </div>
+      </div>
+       <!-- EXPERTISE -->
+       <div>
+        <div class="flex flex-col">
+          <img
+              src="https://drive.google.com/uc?export=view&id=1BVvXzvQTmsJyBx3LCs5itMwDYdXWdWQE"
+              alt="image"
+              width="100"
+              height="100"
+          >
+          <p class="font-bold text-2xl pb-10">Expertise</p>
+        </div>
+        <div class="text-lg">
+          <ul>
+            <li>Graphic Design</li>
+            <li>Motion GFX</li>
+            <li>Website Design</li>
+            <li>Corporate Branding</li>
+            <li>Campaign Ads</li>
+            <li>Social Media Content</li>
+            <li>Furniture Design</li>
+            <li>3D Visualization</li>
+            <li>3D Animation</li>
+          </ul>
+        </div>
+      </div>
+       <!-- INTERPERSONAL -->
+       <div>
+        <div class="flex flex-col">
+          <img
+              src="https://drive.google.com/uc?export=view&id=1BVvXzvQTmsJyBx3LCs5itMwDYdXWdWQE"
+              alt="image"
+              width="100"
+              height="100"
+          >
+          <p class="font-bold text-2xl pb-10">Interpersonal</p>
+        </div>
+        <div class="text-lg">
+          <ul>
+            <li>Collaboration</li>
+            <li>Problem Solving</li>
+            <li>Time Management</li>
+            <li>Communication</li>
+            <li>Creativity</li>
+            <li>Leadership</li>
+            <li>Open to Criticism</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="divider py-20"></div>
+
+    <!-- LEARN MORE ABOUT ME & RESUME -->
+    <div class="flex flex-col pt-10 pb-40">
+      <!-- LEARN MORE ABOUT ME -->
+      <div class="grid grid-cols-1 gap-2">
+        <p class="text-xl xl:text-2xl font-bold text-[#678309]">LEARN MORE ABOUT ME</p>
+        <p class="text-base">Who I am, my achievements, interests, and experiences.</p>
+        <a href="about">
+          <button class="btn normal-case btn-neutral">
+            about me →
+          </button>
+        </a>
+      </div>
+      <!-- OR DOWNLOAD MY RESUME -->
+      <div class="grid grid-cols-1 gap-2 pt-10">
+        <p class="text-xl xl:text-2xl font-bold text-[#678309]">OR DOWNLOAD MY RESUME</p>
+        <p class="text-base">Download my resume in PDF format.</p>
+        <a href="resume">
+          <button class="btn normal-case btn-neutral btn-wide">
+            download my resume →
+          </button>
+        </a>
+      </div>
+    </div>
   </div>
 
   <footer class="footer items-center py-14 bg-[#A697AD] text-[#E6E4D4]">
