--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
           </svg>
         </label>
-        <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 font-extrabold">
+        <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-stone-200 rounded-box w-52 font-extrabold">
           <li><a href="about" class="hover:text-[#A697AD]">ABOUT</a></li>
           <li><a href="resume" class="hover:text-[#A697AD]">RESUME</a></li>
           <li><a href="" class="hover:text-[#A697AD]">GRAPHIC</a></li>
@@ -76,7 +76,7 @@
       </div>
     </div>
 
-    <hr class="py-20 text-black">
+    <div class="divider py-20"></div>
 
     <!-- INTERESTS + HOBBIES -->
     <div class="grid grid-cols-2 gap-10 md:grid-cols-6 md:gap-5">
@@ -121,7 +121,7 @@
       </div>
     </div>
 
-    <hr class="py-20 text-black">
+    <div class="divider py-20"></div>
 
     <!-- PERSONAL -->
     <div class="grid grid-cols-2 gap-10 md:grid-cols-6 md:gap-5">
@@ -173,40 +173,79 @@
       </div>
     </div>
 
-    <hr class="py-20 text-black">
+    <div class="divider py-20"></div>
 
     <!-- SPECIAL AWARDS -->
     <div class="grid grid-cols-2 gap-10 md:grid-cols-6 md:gap-5">
-      <div class="col-span-2 grid grid-cols-1 gap-14 lg:gap-2">
-        <div>
-          <p class="text-xl lg:text-2xl font-bold">Gender/Pronoun</p>
-          <p class="text-base lg:text-lg">She/Her</p>
-        </div>
-        <div>
-          <p class="text-xl lg:text-2xl font-bold">Ethnicity</p>
-          <p class="text-base lg:text-lg">Filipino</p>
-        </div>
+      <div class="col-span-2">
+        <p class="text-xl xl:text-2xl font-bold text-[#678309]">SPECIAL<br/>AWARDS</p>
+      </div>
+      <div class="col-span-4">
+          <p class="text-xl lg:text-2xl font-bold pb-8">→ 2021</p>
+          <div class="grid grid-cols-1 gap-1">
+            <p class="text-xl lg:text-2xl font-bold">
+              International Arts & Design Competition 2021
+            </p>
+            <div class="flex flex-row">
+              <p class="text-base lg:text-lg font-bold text-[#E2883B]">
+                3rd Place Winner
+              </p>
+              <p class="text-base lg:text-lg font-bold">
+                , Professional Category
+              </p>
+            </div>
+            <p class="text-base lg:text-lg text-[#E2883B] font-medium">
+              Furniture Design Category Master Course at Accademia Riaci, Italy
+            </p>
+          </div>
       </div>
     </div>
 
-    <hr class="py-20 text-black">
+    <div class="divider py-20"></div>
 
     <!-- EDUCATION -->
     <div class="grid grid-cols-2 gap-10 md:grid-cols-6 md:gap-5">
-      <div class="col-span-2 grid grid-cols-1 gap-14 lg:gap-2">
-        <div>
-          <p class="text-xl lg:text-2xl font-bold">Gender/Pronoun</p>
-          <p class="text-base lg:text-lg">She/Her</p>
+      <div class="col-span-2">
+        <p class="text-xl xl:text-2xl font-bold text-[#678309]">EDUCATION</p>
+      </div>
+      <div class="col-span-2">
+        <p class="text-xl lg:text-2xl font-bold pb-8">→ 2021</p>
+        <div class="flex flex-col">
+          <p class="text-base lg:text-lg font-extrabold">
+            University of Santo Tomas, Philippines
+          </p>
+          <p class="text-base lg:text-lg text-[#E2883B]">
+            Bachelor of Fine Arts
+          </p>
+          <p class="text-base lg:text-lg text-[#E2883B]">
+            Major in Industrial Design
+          </p>
         </div>
-        <div>
-          <p class="text-xl lg:text-2xl font-bold">Ethnicity</p>
-          <p class="text-base lg:text-lg">Filipino</p>
+      </div>
+      <div class="col-span-2">
+        <p class="text-xl lg:text-2xl font-bold pb-8">→ 2022</p>
+        <div class="flex flex-col">
+          <p class="text-base lg:text-lg font-extrabold">
+            Accademia Riaci, Italy
+          </p>
+          <p class="text-base lg:text-lg text-[#E2883B]">
+            12-Weeks Course in Interior Design
+          </p>
         </div>
       </div>
     </div>
 
-    <hr class="py-20 text-black">
+    <div class="divider py-20"></div>
 
+    <div class="flex flex-col items-center pt-10 pb-40">
+      <p class="text-4xl lg:text-6xl font-bold">view my resume</p>
+      <p class="text-base lg:text-lg font-medium pt-5 pb-8">A summary of my work experience.</p>
+      <a href="resume">
+        <button class="btn normal-case btn-neutral">
+          resume →
+        </button>
+      </a>
+    </div>
   </div>
 
   <footer class="footer items-center py-14 bg-[#A697AD] text-[#E6E4D4]">
