Updated about me text

--- a/about.html
+++ b/about.html
@@ -68,10 +68,12 @@
         <p class="text-4xl lg:text-6xl font-bold text-[#678309] py-10 lg:py-20">about me</p>
         <p class="text-xl lg:text-2xl font-bold text-[#A697AD] pb-5">I am a lot of things.</p>
         <p class="text-base lg:text-lg max-w-3xl">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          After university in 2017, I worked as a Furniture Designer catering to high-end residential and commercial
+          clients that honed my 3D modeling and rendering skills. When the pandemic came in during 2020, I started
+          freelancing on the side as a 3D animator that taps small businesses requiring fun and captivating social media
+          content which eventually led me to create static design content and social media branding for my clients.
+          After four years in the furniture industry and a year of mixing it with my freelance design gig,
+          I eventually landed a position as an Associate Art Director for a Canadian-based startup advertising agency.
         </p>
       </div>
     </div>
