--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
           <li><a href="" class="hover:text-[#A697AD]">3D</a></li>
           <li><a href="" class="hover:text-[#A697AD]">WEB</a></li>
           <li><a href="" class="hover:text-[#A697AD]">FURNITURE</a></li>
-          <li><a href="" class="hover:text-[#A697AD]">BLOG</a></li>
+          <li><a href="blog" class="hover:text-[#A697AD]">BLOG</a></li>
         </ul>
       </div>
       <a href=".">
@@ -49,7 +49,7 @@
         <li><a href="" class="hover:text-[#A697AD]">3D</a></li>
         <li><a href="" class="hover:text-[#A697AD]">WEB</a></li>
         <li><a href="" class="hover:text-[#A697AD]">FURNITURE</a></li>
-        <li><a href="" class="hover:text-[#A697AD]">BLOG</a></li>
+        <li><a href="blog" class="hover:text-[#A697AD]">BLOG</a></li>
       </ul>
     </div>
   </div>
