--- a/blog.html
+++ b/blog.html
@@ -55,90 +55,10 @@
   </div>
 
   <div class="container mx-auto px-5 md:px-10 xl:px-0">
-    <!-- TEXT HEADER -->
-    <div class="py-20 md:py-40 grid grid-cols-1 gap-2 lg:gap-4">
-      <p class="text-4xl lg:text-5xl xl:text-6xl font-bold">Hey I’m Marina and I am a</p>
-      <p class="text-4xl lg:text-5xl xl:text-6xl font-bold">multidisciplinary digital designer</p>
-      <p class="text-xl xl:text-2xl font-semibold">in the field of graphic design, 3D art, and furniture design.</p>
-    </div>
 
     <div class="flex flex-col">
-      <!-- WORKS  -->
-      <p class="text-xl xl:text-2xl font-bold text-[#678309] pb-5">WORKS</p>
-      <!-- GALLERY -->
-      <div class="grid grid-cols-1 lg:grid-cols-3 gap-5">
-        <div class="col-span-1 lg:col-span-2 grid grid-rows-2 gap-5">
-          <div class="content">
-            <a href="">
-              <div class="content-overlay"></div>
-              <img
-                class="content-image rounded-lg"
-                src="images/graphic-design-cover.png"
-                alt="image"
-              >
-              <div class="content-details fadeIn-top">
-                <h3 class="content-title">Graphic Design</h3>
-              </div>
-            </a>
-          </div>
-          <div class="grid grid-cols-1 lg:grid-cols-2 gap-5">
-            <div class="content h-full">
-              <a href="">
-                <div class="content-overlay"></div>
-                <img
-                  class="content-image rounded-lg h-full"
-                  src="images/funiture-cover.png"
-                  alt="image"
-                >
-                <div class="content-details fadeIn-top">
-                  <h3 class="content-title">Web Design</h3>
-                </div>
-              </a>
-            </div>
-            <div class="content h-full">
-              <a href="">
-                <div class="content-overlay"></div>
-                <img
-                  class="content-image rounded-lg h-full"
-                  src="images/funiture-cover.png"
-                  alt="image"
-                >
-                <div class="content-details fadeIn-top">
-                  <h3 class="content-title">Furniture Design</h3>
-                </div>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-span-1">
-          <div class="content hidden lg:block">
-            <a href="">
-              <div class="content-overlay"></div>
-              <img
-                class="content-image rounded-lg"
-                src="images/3d-projects-cover.png"
-                alt="image"
-              >
-              <div class="content-details fadeIn-top">
-                <h3 class="content-title">3D Projects</h3>
-              </div>
-            </a>
-          </div>
-          <div class="content block lg:hidden">
-            <a href="">
-              <div class="content-overlay"></div>
-              <img
-                class="content-image rounded-lg"
-                src="images/graphic-design-cover.png"
-                alt="image"
-              >
-              <div class="content-details fadeIn-top">
-                <h3 class="content-title">3D Projects</h3>
-              </div>
-            </a>
-          </div>
-        </div>
-      </div>
+      <!-- BLOG  -->
+      <p class="text-xl xl:text-2xl font-bold text-[#678309] pb-5">BLOG</p>
     </div>
 
     <div class="py-40 grid grid-cols-1 lg:grid-cols-2 gap-20 lg:gap-60 text-black">
