--- a/about.html
+++ b/about.html
@@ -16,15 +16,35 @@
   </head>
   <body>
 
-  <div class="sticky top-0 z-50 navbar baseColor">
-    <div class="navbar-start">
-      <div class="dropdown">
-        <label tabindex="0" class="btn btn-ghost lg:hidden">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
-          </svg>
-        </label>
-        <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-stone-200 rounded-box w-52 font-extrabold">
+    <div class="sticky top-0 z-50 navbar baseColor">
+      <div class="navbar-start">
+        <div class="dropdown">
+          <label tabindex="0" class="btn btn-ghost xl:hidden">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
+            </svg>
+          </label>
+          <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-stone-200 rounded-box w-52 font-extrabold">
+            <li><a href="about" class="hover:text-[#A697AD]">ABOUT</a></li>
+            <li><a href="resume" class="hover:text-[#A697AD]">RESUME</a></li>
+            <li><a href="" class="hover:text-[#A697AD]">GRAPHIC</a></li>
+            <li><a href="" class="hover:text-[#A697AD]">3D</a></li>
+            <li><a href="" class="hover:text-[#A697AD]">WEB</a></li>
+            <li><a href="" class="hover:text-[#A697AD]">FURNITURE</a></li>
+            <li><a href="blog" class="hover:text-[#A697AD]">BLOG</a></li>
+          </ul>
+        </div>
+        <a href=".">
+          <button class="btn btn-ghost w-max normal-case text-xl lg:text-2xl text-[#E2883B] font-bold">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386l-1.591 1.591M21 12h-2.25m-.386 6.364l-1.591-1.591M12 18.75V21m-4.773-4.227l-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0z" />
+            </svg>
+            marina tatshani
+          </button>
+        </a>
+      </div>
+      <div class="navbar-end hidden xl:flex">
+        <ul class="menu menu-horizontal px-1 font-extrabold text-base">
           <li><a href="about" class="hover:text-[#A697AD]">ABOUT</a></li>
           <li><a href="resume" class="hover:text-[#A697AD]">RESUME</a></li>
           <li><a href="" class="hover:text-[#A697AD]">GRAPHIC</a></li>
@@ -34,27 +54,9 @@
           <li><a href="blog" class="hover:text-[#A697AD]">BLOG</a></li>
         </ul>
       </div>
-      <a href=".">
-        <button class="btn btn-ghost w-max normal-case text-xl lg:text-2xl text-[#E2883B] font-bold">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" /></svg>
-          marina tatshani
-        </button>
-      </a>
     </div>
-    <div class="navbar-end hidden lg:flex">
-      <ul class="menu menu-horizontal px-1 font-extrabold text-base">
-        <li><a href="about" class="hover:text-[#A697AD]">ABOUT</a></li>
-        <li><a href="resume" class="hover:text-[#A697AD]">RESUME</a></li>
-        <li><a href="" class="hover:text-[#A697AD]">GRAPHIC</a></li>
-        <li><a href="" class="hover:text-[#A697AD]">3D</a></li>
-        <li><a href="" class="hover:text-[#A697AD]">WEB</a></li>
-        <li><a href="" class="hover:text-[#A697AD]">FURNITURE</a></li>
-        <li><a href="blog" class="hover:text-[#A697AD]">BLOG</a></li>
-      </ul>
-    </div>
-  </div>
 
-  <div class="container mx-auto px-5 md:px-10 xl:px-0">
+  <div class="main">
     <!-- ABOUT ME -->
     <div class="grid grid-cols-1 lg:grid-cols-3 gap-0 lg:gap-24 pt-40">
       <div class="col-span-1">
