--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="sticky top-0 z-50 navbar baseColor">
     <div class="navbar-start">
       <div class="dropdown">
-        <label tabindex="0" class="btn btn-ghost lg:hidden">
+        <label tabindex="0" class="btn btn-ghost xl:hidden">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
           </svg>
@@ -36,12 +36,14 @@
       </div>
       <a href=".">
         <button class="btn btn-ghost w-max normal-case text-xl lg:text-2xl text-[#E2883B] font-bold">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" /></svg>
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386l-1.591 1.591M21 12h-2.25m-.386 6.364l-1.591-1.591M12 18.75V21m-4.773-4.227l-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0z" />
+          </svg>
           marina tatshani
         </button>
       </a>
     </div>
-    <div class="navbar-end hidden lg:flex">
+    <div class="navbar-end hidden xl:flex">
       <ul class="menu menu-horizontal px-1 font-extrabold text-base">
         <li><a href="about" class="hover:text-[#A697AD]">ABOUT</a></li>
         <li><a href="resume" class="hover:text-[#A697AD]">RESUME</a></li>
@@ -54,7 +56,7 @@
     </div>
   </div>
 
-  <div class="container mx-auto px-5 md:px-10 xl:px-0">
+  <div class="main">
     <!-- TEXT HEADER -->
     <div class="py-20 md:py-40 grid grid-cols-1 gap-2 lg:gap-4">
       <p class="text-4xl lg:text-5xl xl:text-6xl font-bold">Hey I’m Marina and I am a</p>
@@ -158,7 +160,10 @@
           <p class="text-base">Who I am, my achievements, interests, and experiences.</p>
           <a href="about">
             <button class="btn normal-case btn-neutral">
-              about me →
+              about me
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6">
+                <path fill-rule="evenodd" d="M12.97 3.97a.75.75 0 011.06 0l7.5 7.5a.75.75 0 010 1.06l-7.5 7.5a.75.75 0 11-1.06-1.06l6.22-6.22H3a.75.75 0 010-1.5h16.19l-6.22-6.22a.75.75 0 010-1.06z" clip-rule="evenodd" />
+              </svg>
             </button>
           </a>
         </div>
@@ -168,7 +173,10 @@
           <p class="text-base">A summary of my work experience.</p>
           <a href="resume">
             <button class="btn normal-case btn-neutral">
-              resume →
+              resume
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6">
+                <path fill-rule="evenodd" d="M12.97 3.97a.75.75 0 011.06 0l7.5 7.5a.75.75 0 010 1.06l-7.5 7.5a.75.75 0 11-1.06-1.06l6.22-6.22H3a.75.75 0 010-1.5h16.19l-6.22-6.22a.75.75 0 010-1.06z" clip-rule="evenodd" />
+              </svg>
             </button>
           </a>
         </div>
